# MSc-Math-Finance-Projects

./: CMakeLists.txt  README.md  apt.txt  environment.yml  postBuild
doc/: CMakeLists.txt  Doxyfile.in
include/: MSc_Math_Finance_2018.hpp  MSc_projects_Integrate.hpp  MSc_projects_financialMarket.hpp  MSc_projects_gnuplot.hpp  MSc_projects_mVector.hpp  MSc_projects_newton.hpp  MSc_projects_optimalGenerator.hpp  MSc_projects_pde_solvers.hpp  MSc_projects_perpetual_bermudan_put.hpp  MSc_projects_quad.hpp  MSc_projects_storage.hpp  MSc_projects_table.hpp
lib/: libboost_system.so.1.67.0
main/: CMakeLists.txt  main.cpp  project-11-perpetual-QUAD.cpp  project-11-perpetual-bermudan.cpp  project-4-optimal-liquidation-all-in-one.cpp  project-4-optimal-liquidation.cpp  project-5-hedge-funds.cpp  project-6-revenue-management.cpp  project-7-exotic-options.cpp  project-7-quad-barrier-option.cpp  project-8-jump-diffusion.cpp  project-9-free-boundaries.cpp  project-Fokker-Planck.cpp  project-financialMarkets.cpp  project-optimalGeneratorControl.cpp  project-perturbationMethods.cpp  project-storage.cpp
notebooks/: BMI Reports API.ipynb  CSV Readline Example.ipynb  Energy Markets - An Optimal Generator.ipynb  Financial Markets.ipynb  Fokker Planck.ipynb  MSc Project 11 - Perpetual Bermudans.ipynb  MSc Project 4 - Optimal Liquidation.ipynb  MSc Project 5 - Hedge Funds.ipynb  MSc Project 6 - Revenue Management.ipynb  MSc Project 7 - Exotic Options.ipynb  MSc Project 8 - Jump Diffusion.ipynb  MSc Project 9 - Free Boundaries.ipynb  Perpetual Bermudans.ipynb  Perturbation Methods in Finance.ipynb  Valuing Storage of Wind Power.ipynb  csv_readline_example_loader.hpp  msc_cling_libs_loader.hpp  msc_gnuplot_image.hpp  msc_project_4.hpp  msc_project_6.hpp  msc_project_7.hpp  msc_project_8.hpp  msc_project_9.hpp  msc_project_energyMarkets.hpp  msc_project_financialMarkets.hpp  msc_project_fokkerPlanck.hpp  msc_project_perturbationMethods.hpp  msc_project_storage.hpp  test.csv
notebooks/.ipynb_checkpoints/: MSc Project 4 - Optimal Liquidation-checkpoint.ipynb  MSc Project 5 - Hedge Funds-checkpoint.ipynb
src/: CMakeLists.txt  MSc_Math_Finance_2018.cpp  MSc_project_financialMarket.cpp  MSc_projects_gnuplot.cpp  MSc_projects_mVector.cpp  MSc_projects_optimalGenerator.cpp  MSc_projects_pde_solvers.cpp  MSc_projects_perpetual_bermudan_put.cpp  MSc_projects_quad.cpp  MSc_projects_storage.cpp
