

OPTION(UNIBUILD "Build on uni computers" OFF)

IF(UNIBUILD)
	MESSAGE("Building on vummath")
	SET(GCCLOCATIONUNI "/opt/gcc483")
        SET(CMAKE_MODULE_PATH ${GCCLOCATIONUNI} )
        SET(CMAKE_CXX_COMPILER ${GCCLOCATIONUNI}/bin/g++)
        INCLUDE_DIRECTORIES( ${GCCLOCATIONUNI}/include )
	SET(NAG_DIR "/opt/NAGgnu/cll6a23dhl")
ELSE()
	IF(APPLE)
		SET(NAG_DIR "/opt/NAG/clmi623dgl")
		#SET(CMAKE_CXX_COMPILER /usr/local/bin/g++)
	ELSE()
		SET(NAG_DIR "/opt/NAG/cll6a23dhl")
	ENDIF()
ENDIF()

PROJECT(  MSc_Math_Finance_2018 )

SET(CMAKE_CXX_STANDARD 11)
SET(CMAKE_BUILD_TYPE Release)
SET(COMMON_USER_LIBS $ENV{HOME}/Codes/lib)
SET(COMMONMATHLIB_INCLUDES $ENV{HOME}/Codes/CommonFiles/include)

SET(ALGLIB_INCLUDES $ENV{HOME}/Codes/ALGLIB/cpp/include)
FIND_LIBRARY(ALGLIB_LIBRARY alglib_myBuild PATHS ${COMMON_USER_LIBS})

SET(COMMONMATHLIB_INCLUDES $ENV{HOME}/Codes/CommonFiles/include)
FIND_LIBRARY(COMMONMATHLIB_LIBRARY CommonMathLIB PATHS ${COMMON_USER_LIBS})

SET(CMAKE_INSTALL_RPATH_USE_LINK_PATH TRUE)
find_library(NAG_LIBRARY_PATH nagc_nag PATHS ${NAG_DIR}/lib)
LINK_DIRECTORIES(${NAG_DIR}/lib ${COMMON_USER_LIBS} )

FIND_PACKAGE ( Threads REQUIRED )
FIND_PACKAGE ( Boost REQUIRED )

INCLUDE_DIRECTORIES( include ${COMMONMATHLIB_INCLUDES} ${ALGLIB_INCLUDES} ${NAG_DIR}/include)
IF(UNIBUILD)
add_definitions( -std=c++11 -Wall -Wextra -Wpedantic -ffast-math -O3 )
ELSE()
ADD_COMPILE_OPTIONS(-Wall -Wextra -Wpedantic -ffast-math -O3)
ENDIF()

SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${COMMON_USER_LIBS})
SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${COMMON_USER_LIBS}) 
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)

ADD_SUBDIRECTORY( src )
ADD_SUBDIRECTORY( main )
ADD_SUBDIRECTORY( doc )


