PROJECT(  MSc_Math_Finance_2018 )

SET(CMAKE_CXX_STANDARD 14)
SET(CMAKE_BUILD_TYPE Release)

FIND_PACKAGE ( Threads REQUIRED )
link_directories( $ENV{HOME}/Codes/Boost/boost_1_67_0/stage/lib )
INCLUDE_DIRECTORIES( include $ENV{HOME}/Codes/Boost/boost_1_67_0)

ADD_COMPILE_OPTIONS(-Wall -Wextra -Wpedantic -ffast-math -O3)

SET(USER_LOCATION_DIR $ENV{HOME}/Codes/MSc_Students/2018 )
SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${USER_LOCATION_DIR}/lib)
SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${USER_LOCATION_DIR}/lib) 
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${USER_LOCATION_DIR}/bin)

ADD_SUBDIRECTORY( src )
ADD_SUBDIRECTORY( main )



