PROJECT(  MSC-Math-Finance-Projects )

SET(CMAKE_CXX_STANDARD 14)
SET(CMAKE_BUILD_TYPE RELEASE)

FIND_PACKAGE ( Threads REQUIRED )
FIND_PACKAGE ( Boost REQUIRED )
INCLUDE_DIRECTORIES( ${CMAKE_CURRENT_SOURCE_DIR}/MATH60082/include ${CMAKE_CURRENT_SOURCE_DIR}/include /usr/local)
LINK_DIRECTORIES( ${CMAKE_CURRENT_SOURCE_DIR}/MATH60082/lib )

ADD_COMPILE_OPTIONS(-Wall -Wextra -Wpedantic )

SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/lib)
SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/lib)

ADD_SUBDIRECTORY( src )
ADD_SUBDIRECTORY( main )



