
ADD_EXECUTABLE( MSc_projects_4.out project-4-optimal-liquidation-all-in-one.cpp )
 TARGET_LINK_LIBRARIES( MSc_projects_4.out mscmathfinanceprojects)

ADD_EXECUTABLE( MSc_projects_5.out project-5-hedge-funds.cpp )
 TARGET_LINK_LIBRARIES( MSc_projects_5.out mscmathfinanceprojects )

ADD_EXECUTABLE( MSc_projects_6.out project-6-revenue-management.cpp )
 TARGET_LINK_LIBRARIES( MSc_projects_6.out mscmathfinanceprojects )

ADD_EXECUTABLE( MSc_projects_7.out project-7-exotic-options.cpp )
 TARGET_LINK_LIBRARIES( MSc_projects_7.out mscmathfinanceprojects )

ADD_EXECUTABLE( MSc_projects_8.out project-8-jump-diffusion.cpp )
 TARGET_LINK_LIBRARIES( MSc_projects_8.out mscmathfinanceprojects )

ADD_EXECUTABLE( MSc_projects_9.out project-9-free-boundaries.cpp )
TARGET_LINK_LIBRARIES( MSc_projects_9.out mscmathfinanceprojects )

ADD_EXECUTABLE( MSc_projects_11.out project-11-perpetual-QUAD.cpp )
TARGET_LINK_LIBRARIES( MSc_projects_11.out mscmathfinanceprojects )
