
SET(MY_LIBRARY_SRCS  
MSc_Math_Finance_2018.cpp 
)

ADD_LIBRARY(MSc_Math_Finance_2018LIB SHARED
${MY_LIBRARY_SRCS} 
)

TARGET_LINK_LIBRARIES( MSc_Math_Finance_2018LIB ${COMMONMATHLIB_LIBRARY})

ADD_LIBRARY(MSc_Math_Finance_2018LIB_static STATIC
${MY_LIBRARY_SRCS} 
)

TARGET_LINK_LIBRARIES( MSc_Math_Finance_2018LIB_static ${COMMONMATHLIB_LIBRARY}_static)

